# django-template

./: .gitignore  Aptfile  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
testandotemplate/: asgi.py  settings.py  urls.py  wsgi.py
